--- a/config/document-explorer-definition.yaml
+++ b/config/document-explorer-definition.yaml
@@ -54,7 +54,7 @@
 - sections:
   - title: BluePay Gateway
 - sections:
-  - title: Release notes
+  - title: What's New?
     sections:
-    - title: March 2022
+    - title: August 2023
       link: docs/release-notes/2022/march.md
