--- a/config/document-explorer-definition.yaml
+++ b/config/document-explorer-definition.yaml
@@ -51,6 +51,7 @@
     link: docs/documentation/CardSecure.md
 - sections:
   - title: eCommerce Plugins
+    link: https://support.cardpointe.com/cardpointe/marketplace#eCommerce
 - sections:
   - title: BluePay Gateway
     link: docs/documentation/BluePayGatewayAPI.md
