--- a/reference/1.0.0/CardSecureAPI/CardSecureAPI.yaml
+++ b/reference/1.0.0/CardSecureAPI/CardSecureAPI.yaml
@@ -37,7 +37,7 @@ servers:
  - {url: 'DNE', description: Production}
  - {url: 'DNE', description: Sandbox}
 paths:
-  /v1/cnn/tokenize:
+  /cardsecure/api/v1/cnn/tokenize:
     post:
       tags:
         - Tokenize Endpoint Definition
