--- a/reference/1.0.0/CardPointeIntegratedTerminalAPI/CardPointeIntegratedTerminalAPI.yaml
+++ b/reference/1.0.0/CardPointeIntegratedTerminalAPI/CardPointeIntegratedTerminalAPI.yaml
@@ -288,6 +288,7 @@ components:
       properties:
         terminals: {
           description: "An array of Hardware Serial Numbers (HSNs) for each terminal for the specified merchant ID.",
+          type: object
           example:  
              [ 
                "12145SC70108037", 
