--- a/reference/1.0.0/CardPointeIntegratedTerminalAPI/CardPointeIntegratedTerminalAPI.yaml
+++ b/reference/1.0.0/CardPointeIntegratedTerminalAPI/CardPointeIntegratedTerminalAPI.yaml
@@ -55,7 +55,7 @@ paths:
               $ref: '#/components/schemas/ping'
       parameters:
         - {$ref: '#/components/parameters/ContentTypeHeader'}
-           ## $ref: ''}
+        - {$ref: '#/components/parameters/X-CardConnect-SessionKey'}
       responses:
         200: 
           description: Success
